y.output
Terminals which are not used

   INFINITY


Grammar

    0 $accept: query $end

    1 query: with_query SEMICOLON query SEMICOLON
    2      | select_query SEMICOLON
    3      | create_query SEMICOLON
    4      | insert_query SEMICOLON
    5      | update_query SEMICOLON
    6      | delete_query SEMICOLON
    7      | COMMIT SEMICOLON
    8      | ROLLBACK SEMICOLON

    9 with_query: WITH table_as_list

   10 table_as_list: table_as COMMA table_as
   11              | table_as

   12 table_as: table_desc AS select_query

   13 table_desc: NAME ROUND_BRACKET_OPEN column_list ROUND_BRACKET_CLOSE

   14 select_query: SELECT column_list FROM table_list
   15             | SELECT column_list FROM table_list WHERE condition

   16 column_list: column_list COMMA column
   17            | column

   18 column: DOT_NAME
   19       | NAME

   20 table_list: table COMMA table
   21           | table

   22 table: NAME

   23 condition: condition AND condition
   24          | condition OR condition
   25          | NOT condition
   26          | relex

   27 relex: expression GE expression
   28      | expression LT expression
   29      | expression GT expression
   30      | expression LE expression
   31      | expression NE expression
   32      | expression EQ expression

   33 expression: expression MULT expression
   34           | expression PLUS expression
   35           | expression MINUS expression
   36           | expression DIV expression
   37           | constant
   38           | DOT_NAME

   39 constant: TEXT_CONSTANT
   40         | INT_CONSTANT
   41         | FLOAT_CONSTANT

   42 create_query: CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list COMMA constraint ROUND_BRACKET_CLOSE
   43             | CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list ROUND_BRACKET_CLOSE

   44 column_desc_list: column_desc_list COMMA column_desc
   45                 | column_desc

   46 column_desc: NAME type range
   47            | NAME type

   48 type: INT
   49     | FLOAT
   50     | TEXT

   51 range: RANGE ROUND_BRACKET_OPEN BETWEEN constant AND constant ROUND_BRACKET_CLOSE

   52 constraint: PRIMARY KEY ROUND_BRACKET_OPEN column_list ROUND_BRACKET_CLOSE

   53 insert_query: INSERT INTO NAME VALUES ROUND_BRACKET_OPEN column_val_list ROUND_BRACKET_CLOSE

   54 column_val_list: column_val_list COMMA column_val
   55                | column_val

   56 column_val: TEXT_CONSTANT

   57 update_query: UPDATE NAME SET update_list WHERE condition
   58             | UPDATE NAME SET update_list

   59 update_list: update_list COMMA update
   60            | update

   61 update: NAME ASSIGN NAME
   62       | NAME ASSIGN constant

   63 delete_query: DELETE FROM NAME condition
   64             | DELETE FROM NAME


Terminals, with rules where they appear

$end (0) 0
error (256)
DOT_NAME (258) 18 38
NAME (259) 13 19 22 42 43 46 47 53 57 58 61 62 63 64
TEXT_CONSTANT (260) 39 56
INT_CONSTANT (261) 40
FLOAT_CONSTANT (262) 41
INT (263) 48
FLOAT (264) 49
TEXT (265) 50
AND (266) 23 51
OR (267) 24
NOT (268) 25
MULT (269) 33
PLUS (270) 34
MINUS (271) 35
DIV (272) 36
GE (273) 27
LT (274) 28
GT (275) 29
LE (276) 30
NE (277) 31
EQ (278) 32
SEMICOLON (279) 1 2 3 4 5 6 7 8
COMMIT (280) 7
ROLLBACK (281) 8
WITH (282) 9
COMMA (283) 10 16 20 42 44 54 59
AS (284) 12
ROUND_BRACKET_OPEN (285) 13 42 43 51 52 53
ROUND_BRACKET_CLOSE (286) 13 42 43 51 52 53
SELECT (287) 14 15
FROM (288) 14 15 63 64
WHERE (289) 15 57
CREATE (290) 42 43
TABLE (291) 42 43
RANGE (292) 51
PRIMARY (293) 52
KEY (294) 52
INSERT (295) 53
INTO (296) 53
VALUES (297) 53
ASSIGN (298) 61 62
UPDATE (299) 57 58
SET (300) 57 58
DELETE (301) 63 64
INFINITY (302)
BETWEEN (303) 51
REDC (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
query (51)
    on left: 1 2 3 4 5 6 7 8, on right: 0 1
with_query (52)
    on left: 9, on right: 1
table_as_list (53)
    on left: 10 11, on right: 9
table_as (54)
    on left: 12, on right: 10 11
table_desc (55)
    on left: 13, on right: 12
select_query (56)
    on left: 14 15, on right: 2 12
column_list (57)
    on left: 16 17, on right: 13 14 15 16 52
column (58)
    on left: 18 19, on right: 16 17
table_list (59)
    on left: 20 21, on right: 14 15
table (60)
    on left: 22, on right: 20 21
condition (61)
    on left: 23 24 25 26, on right: 15 23 24 25 57 63
relex (62)
    on left: 27 28 29 30 31 32, on right: 26
expression (63)
    on left: 33 34 35 36 37 38, on right: 27 28 29 30 31 32 33 34 35
    36
constant (64)
    on left: 39 40 41, on right: 37 51 62
create_query (65)
    on left: 42 43, on right: 3
column_desc_list (66)
    on left: 44 45, on right: 42 43 44
column_desc (67)
    on left: 46 47, on right: 44 45
type (68)
    on left: 48 49 50, on right: 46 47
range (69)
    on left: 51, on right: 46
constraint (70)
    on left: 52, on right: 42
insert_query (71)
    on left: 53, on right: 4
column_val_list (72)
    on left: 54 55, on right: 53 54
column_val (73)
    on left: 56, on right: 54 55
update_query (74)
    on left: 57 58, on right: 5
update_list (75)
    on left: 59 60, on right: 57 58 59
update (76)
    on left: 61 62, on right: 59 60
delete_query (77)
    on left: 63 64, on right: 6


state 0

    0 $accept: . query $end

    COMMIT    shift, and go to state 1
    ROLLBACK  shift, and go to state 2
    WITH      shift, and go to state 3
    SELECT    shift, and go to state 4
    CREATE    shift, and go to state 5
    INSERT    shift, and go to state 6
    UPDATE    shift, and go to state 7
    DELETE    shift, and go to state 8

    query         go to state 9
    with_query    go to state 10
    select_query  go to state 11
    create_query  go to state 12
    insert_query  go to state 13
    update_query  go to state 14
    delete_query  go to state 15


state 1

    7 query: COMMIT . SEMICOLON

    SEMICOLON  shift, and go to state 16


state 2

    8 query: ROLLBACK . SEMICOLON

    SEMICOLON  shift, and go to state 17


state 3

    9 with_query: WITH . table_as_list

    NAME  shift, and go to state 18

    table_as_list  go to state 19
    table_as       go to state 20
    table_desc     go to state 21


state 4

   14 select_query: SELECT . column_list FROM table_list
   15             | SELECT . column_list FROM table_list WHERE condition

    DOT_NAME  shift, and go to state 22
    NAME      shift, and go to state 23

    column_list  go to state 24
    column       go to state 25


state 5

   42 create_query: CREATE . TABLE NAME ROUND_BRACKET_OPEN column_desc_list COMMA constraint ROUND_BRACKET_CLOSE
   43             | CREATE . TABLE NAME ROUND_BRACKET_OPEN column_desc_list ROUND_BRACKET_CLOSE

    TABLE  shift, and go to state 26


state 6

   53 insert_query: INSERT . INTO NAME VALUES ROUND_BRACKET_OPEN column_val_list ROUND_BRACKET_CLOSE

    INTO  shift, and go to state 27


state 7

   57 update_query: UPDATE . NAME SET update_list WHERE condition
   58             | UPDATE . NAME SET update_list

    NAME  shift, and go to state 28


state 8

   63 delete_query: DELETE . FROM NAME condition
   64             | DELETE . FROM NAME

    FROM  shift, and go to state 29


state 9

    0 $accept: query . $end

    $end  shift, and go to state 30


state 10

    1 query: with_query . SEMICOLON query SEMICOLON

    SEMICOLON  shift, and go to state 31


state 11

    2 query: select_query . SEMICOLON

    SEMICOLON  shift, and go to state 32


state 12

    3 query: create_query . SEMICOLON

    SEMICOLON  shift, and go to state 33


state 13

    4 query: insert_query . SEMICOLON

    SEMICOLON  shift, and go to state 34


state 14

    5 query: update_query . SEMICOLON

    SEMICOLON  shift, and go to state 35


state 15

    6 query: delete_query . SEMICOLON

    SEMICOLON  shift, and go to state 36


state 16

    7 query: COMMIT SEMICOLON .

    $default  reduce using rule 7 (query)


state 17

    8 query: ROLLBACK SEMICOLON .

    $default  reduce using rule 8 (query)


state 18

   13 table_desc: NAME . ROUND_BRACKET_OPEN column_list ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 37


state 19

    9 with_query: WITH table_as_list .

    $default  reduce using rule 9 (with_query)


state 20

   10 table_as_list: table_as . COMMA table_as
   11              | table_as .

    COMMA  shift, and go to state 38

    $default  reduce using rule 11 (table_as_list)


state 21

   12 table_as: table_desc . AS select_query

    AS  shift, and go to state 39


state 22

   18 column: DOT_NAME .

    $default  reduce using rule 18 (column)


state 23

   19 column: NAME .

    $default  reduce using rule 19 (column)


state 24

   14 select_query: SELECT column_list . FROM table_list
   15             | SELECT column_list . FROM table_list WHERE condition
   16 column_list: column_list . COMMA column

    COMMA  shift, and go to state 40
    FROM   shift, and go to state 41


state 25

   17 column_list: column .

    $default  reduce using rule 17 (column_list)


state 26

   42 create_query: CREATE TABLE . NAME ROUND_BRACKET_OPEN column_desc_list COMMA constraint ROUND_BRACKET_CLOSE
   43             | CREATE TABLE . NAME ROUND_BRACKET_OPEN column_desc_list ROUND_BRACKET_CLOSE

    NAME  shift, and go to state 42


state 27

   53 insert_query: INSERT INTO . NAME VALUES ROUND_BRACKET_OPEN column_val_list ROUND_BRACKET_CLOSE

    NAME  shift, and go to state 43


state 28

   57 update_query: UPDATE NAME . SET update_list WHERE condition
   58             | UPDATE NAME . SET update_list

    SET  shift, and go to state 44


state 29

   63 delete_query: DELETE FROM . NAME condition
   64             | DELETE FROM . NAME

    NAME  shift, and go to state 45


state 30

    0 $accept: query $end .

    $default  accept


state 31

    1 query: with_query SEMICOLON . query SEMICOLON

    COMMIT    shift, and go to state 1
    ROLLBACK  shift, and go to state 2
    WITH      shift, and go to state 3
    SELECT    shift, and go to state 4
    CREATE    shift, and go to state 5
    INSERT    shift, and go to state 6
    UPDATE    shift, and go to state 7
    DELETE    shift, and go to state 8

    query         go to state 46
    with_query    go to state 10
    select_query  go to state 11
    create_query  go to state 12
    insert_query  go to state 13
    update_query  go to state 14
    delete_query  go to state 15


state 32

    2 query: select_query SEMICOLON .

    $default  reduce using rule 2 (query)


state 33

    3 query: create_query SEMICOLON .

    $default  reduce using rule 3 (query)


state 34

    4 query: insert_query SEMICOLON .

    $default  reduce using rule 4 (query)


state 35

    5 query: update_query SEMICOLON .

    $default  reduce using rule 5 (query)


state 36

    6 query: delete_query SEMICOLON .

    $default  reduce using rule 6 (query)


state 37

   13 table_desc: NAME ROUND_BRACKET_OPEN . column_list ROUND_BRACKET_CLOSE

    DOT_NAME  shift, and go to state 22
    NAME      shift, and go to state 23

    column_list  go to state 47
    column       go to state 25


state 38

   10 table_as_list: table_as COMMA . table_as

    NAME  shift, and go to state 18

    table_as    go to state 48
    table_desc  go to state 21


state 39

   12 table_as: table_desc AS . select_query

    SELECT  shift, and go to state 4

    select_query  go to state 49


state 40

   16 column_list: column_list COMMA . column

    DOT_NAME  shift, and go to state 22
    NAME      shift, and go to state 23

    column  go to state 50


state 41

   14 select_query: SELECT column_list FROM . table_list
   15             | SELECT column_list FROM . table_list WHERE condition

    NAME  shift, and go to state 51

    table_list  go to state 52
    table       go to state 53


state 42

   42 create_query: CREATE TABLE NAME . ROUND_BRACKET_OPEN column_desc_list COMMA constraint ROUND_BRACKET_CLOSE
   43             | CREATE TABLE NAME . ROUND_BRACKET_OPEN column_desc_list ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 54


state 43

   53 insert_query: INSERT INTO NAME . VALUES ROUND_BRACKET_OPEN column_val_list ROUND_BRACKET_CLOSE

    VALUES  shift, and go to state 55


state 44

   57 update_query: UPDATE NAME SET . update_list WHERE condition
   58             | UPDATE NAME SET . update_list

    NAME  shift, and go to state 56

    update_list  go to state 57
    update       go to state 58


state 45

   63 delete_query: DELETE FROM NAME . condition
   64             | DELETE FROM NAME .

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62
    NOT             shift, and go to state 63

    $default  reduce using rule 64 (delete_query)

    condition   go to state 64
    relex       go to state 65
    expression  go to state 66
    constant    go to state 67


state 46

    1 query: with_query SEMICOLON query . SEMICOLON

    SEMICOLON  shift, and go to state 68


state 47

   13 table_desc: NAME ROUND_BRACKET_OPEN column_list . ROUND_BRACKET_CLOSE
   16 column_list: column_list . COMMA column

    COMMA                shift, and go to state 40
    ROUND_BRACKET_CLOSE  shift, and go to state 69


state 48

   10 table_as_list: table_as COMMA table_as .

    $default  reduce using rule 10 (table_as_list)


state 49

   12 table_as: table_desc AS select_query .

    $default  reduce using rule 12 (table_as)


state 50

   16 column_list: column_list COMMA column .

    $default  reduce using rule 16 (column_list)


state 51

   22 table: NAME .

    $default  reduce using rule 22 (table)


state 52

   14 select_query: SELECT column_list FROM table_list .
   15             | SELECT column_list FROM table_list . WHERE condition

    WHERE  shift, and go to state 70

    $default  reduce using rule 14 (select_query)


state 53

   20 table_list: table . COMMA table
   21           | table .

    COMMA  shift, and go to state 71

    $default  reduce using rule 21 (table_list)


state 54

   42 create_query: CREATE TABLE NAME ROUND_BRACKET_OPEN . column_desc_list COMMA constraint ROUND_BRACKET_CLOSE
   43             | CREATE TABLE NAME ROUND_BRACKET_OPEN . column_desc_list ROUND_BRACKET_CLOSE

    NAME  shift, and go to state 72

    column_desc_list  go to state 73
    column_desc       go to state 74


state 55

   53 insert_query: INSERT INTO NAME VALUES . ROUND_BRACKET_OPEN column_val_list ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 75


state 56

   61 update: NAME . ASSIGN NAME
   62       | NAME . ASSIGN constant

    ASSIGN  shift, and go to state 76


state 57

   57 update_query: UPDATE NAME SET update_list . WHERE condition
   58             | UPDATE NAME SET update_list .
   59 update_list: update_list . COMMA update

    COMMA  shift, and go to state 77
    WHERE  shift, and go to state 78

    $default  reduce using rule 58 (update_query)


state 58

   60 update_list: update .

    $default  reduce using rule 60 (update_list)


state 59

   38 expression: DOT_NAME .

    $default  reduce using rule 38 (expression)


state 60

   39 constant: TEXT_CONSTANT .

    $default  reduce using rule 39 (constant)


state 61

   40 constant: INT_CONSTANT .

    $default  reduce using rule 40 (constant)


state 62

   41 constant: FLOAT_CONSTANT .

    $default  reduce using rule 41 (constant)


state 63

   25 condition: NOT . condition

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62
    NOT             shift, and go to state 63

    condition   go to state 79
    relex       go to state 65
    expression  go to state 66
    constant    go to state 67


state 64

   23 condition: condition . AND condition
   24          | condition . OR condition
   63 delete_query: DELETE FROM NAME condition .

    AND  shift, and go to state 80
    OR   shift, and go to state 81

    $default  reduce using rule 63 (delete_query)


state 65

   26 condition: relex .

    $default  reduce using rule 26 (condition)


state 66

   27 relex: expression . GE expression
   28      | expression . LT expression
   29      | expression . GT expression
   30      | expression . LE expression
   31      | expression . NE expression
   32      | expression . EQ expression
   33 expression: expression . MULT expression
   34           | expression . PLUS expression
   35           | expression . MINUS expression
   36           | expression . DIV expression

    MULT   shift, and go to state 82
    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84
    DIV    shift, and go to state 85
    GE     shift, and go to state 86
    LT     shift, and go to state 87
    GT     shift, and go to state 88
    LE     shift, and go to state 89
    NE     shift, and go to state 90
    EQ     shift, and go to state 91


state 67

   37 expression: constant .

    $default  reduce using rule 37 (expression)


state 68

    1 query: with_query SEMICOLON query SEMICOLON .

    $default  reduce using rule 1 (query)


state 69

   13 table_desc: NAME ROUND_BRACKET_OPEN column_list ROUND_BRACKET_CLOSE .

    $default  reduce using rule 13 (table_desc)


state 70

   15 select_query: SELECT column_list FROM table_list WHERE . condition

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62
    NOT             shift, and go to state 63

    condition   go to state 92
    relex       go to state 65
    expression  go to state 66
    constant    go to state 67


state 71

   20 table_list: table COMMA . table

    NAME  shift, and go to state 51

    table  go to state 93


state 72

   46 column_desc: NAME . type range
   47            | NAME . type

    INT    shift, and go to state 94
    FLOAT  shift, and go to state 95
    TEXT   shift, and go to state 96

    type  go to state 97


state 73

   42 create_query: CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list . COMMA constraint ROUND_BRACKET_CLOSE
   43             | CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list . ROUND_BRACKET_CLOSE
   44 column_desc_list: column_desc_list . COMMA column_desc

    COMMA                shift, and go to state 98
    ROUND_BRACKET_CLOSE  shift, and go to state 99


state 74

   45 column_desc_list: column_desc .

    $default  reduce using rule 45 (column_desc_list)


state 75

   53 insert_query: INSERT INTO NAME VALUES ROUND_BRACKET_OPEN . column_val_list ROUND_BRACKET_CLOSE

    TEXT_CONSTANT  shift, and go to state 100

    column_val_list  go to state 101
    column_val       go to state 102


state 76

   61 update: NAME ASSIGN . NAME
   62       | NAME ASSIGN . constant

    NAME            shift, and go to state 103
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62

    constant  go to state 104


state 77

   59 update_list: update_list COMMA . update

    NAME  shift, and go to state 56

    update  go to state 105


state 78

   57 update_query: UPDATE NAME SET update_list WHERE . condition

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62
    NOT             shift, and go to state 63

    condition   go to state 106
    relex       go to state 65
    expression  go to state 66
    constant    go to state 67


state 79

   23 condition: condition . AND condition
   24          | condition . OR condition
   25          | NOT condition .

    $default  reduce using rule 25 (condition)


state 80

   23 condition: condition AND . condition

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62
    NOT             shift, and go to state 63

    condition   go to state 107
    relex       go to state 65
    expression  go to state 66
    constant    go to state 67


state 81

   24 condition: condition OR . condition

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62
    NOT             shift, and go to state 63

    condition   go to state 108
    relex       go to state 65
    expression  go to state 66
    constant    go to state 67


state 82

   33 expression: expression MULT . expression

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62

    expression  go to state 109
    constant    go to state 67


state 83

   34 expression: expression PLUS . expression

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62

    expression  go to state 110
    constant    go to state 67


state 84

   35 expression: expression MINUS . expression

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62

    expression  go to state 111
    constant    go to state 67


state 85

   36 expression: expression DIV . expression

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62

    expression  go to state 112
    constant    go to state 67


state 86

   27 relex: expression GE . expression

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62

    expression  go to state 113
    constant    go to state 67


state 87

   28 relex: expression LT . expression

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62

    expression  go to state 114
    constant    go to state 67


state 88

   29 relex: expression GT . expression

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62

    expression  go to state 115
    constant    go to state 67


state 89

   30 relex: expression LE . expression

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62

    expression  go to state 116
    constant    go to state 67


state 90

   31 relex: expression NE . expression

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62

    expression  go to state 117
    constant    go to state 67


state 91

   32 relex: expression EQ . expression

    DOT_NAME        shift, and go to state 59
    TEXT_CONSTANT   shift, and go to state 60
    INT_CONSTANT    shift, and go to state 61
    FLOAT_CONSTANT  shift, and go to state 62

    expression  go to state 118
    constant    go to state 67


state 92

   15 select_query: SELECT column_list FROM table_list WHERE condition .
   23 condition: condition . AND condition
   24          | condition . OR condition

    AND  shift, and go to state 80
    OR   shift, and go to state 81

    $default  reduce using rule 15 (select_query)


state 93

   20 table_list: table COMMA table .

    $default  reduce using rule 20 (table_list)


state 94

   48 type: INT .

    $default  reduce using rule 48 (type)


state 95

   49 type: FLOAT .

    $default  reduce using rule 49 (type)


state 96

   50 type: TEXT .

    $default  reduce using rule 50 (type)


state 97

   46 column_desc: NAME type . range
   47            | NAME type .

    RANGE  shift, and go to state 119

    $default  reduce using rule 47 (column_desc)

    range  go to state 120


state 98

   42 create_query: CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list COMMA . constraint ROUND_BRACKET_CLOSE
   44 column_desc_list: column_desc_list COMMA . column_desc

    NAME     shift, and go to state 72
    PRIMARY  shift, and go to state 121

    column_desc  go to state 122
    constraint   go to state 123


state 99

   43 create_query: CREATE TABLE NAME ROUND_BRACKET_OPEN column_desc_list ROUND_BRACKET_CLOSE .

    $default  reduce using rule 43 (create_query)


state 100

   56 column_val: TEXT_CONSTANT .

    $default  reduce using rule 56 (column_val)


state 101

   53 insert_query: INSERT INTO NAME VALUES ROUND_BRACKET_OPEN column_val_list . ROUND_BRACKET_CLOSE
   54 column_val_list: column_val_list . COMMA column_val

    COMMA                shift, and go to state 124
    ROUND_BRACKET_CLOSE  shift, and go to state 125


state 102

   55 column_val_list: column_val .

    $default  reduce using rule 55 (column_val_list)


state 103

   61 update: NAME ASSIGN NAME .

    $default  reduce using rule 61 (update)


state 104

   62 update: NAME ASSIGN constant .

    $default  reduce using rule 62 (update)


state 105

   59 update_list: update_list COMMA update .

    $default  reduce using rule 59 (update_list)


state 106

   23 condition: condition . AND condition
   24          | condition . OR condition
   57 update_query: UPDATE NAME SET update_list WHERE condition .

    AND  shift, and go to state 80
    OR   shift, and go to state 81

    $default  reduce using rule 57 (update_query)


state 107

   23 condition: condition . AND condition
   23          | condition AND condition .
   24          | condition . OR condition

    $default  reduce using rule 23 (condition)


state 108

   23 condition: condition . AND condition
   24          | condition . OR condition
   24          | condition OR condition .

    AND  shift, and go to state 80

    $default  reduce using rule 24 (condition)


state 109

   33 expression: expression . MULT expression
   33           | expression MULT expression .
   34           | expression . PLUS expression
   35           | expression . MINUS expression
   36           | expression . DIV expression

    $default  reduce using rule 33 (expression)


state 110

   33 expression: expression . MULT expression
   34           | expression . PLUS expression
   34           | expression PLUS expression .
   35           | expression . MINUS expression
   36           | expression . DIV expression

    MULT  shift, and go to state 82
    DIV   shift, and go to state 85

    $default  reduce using rule 34 (expression)


state 111
